6880903: G1: G1 reports incorrect Runtime.maxMemory()

G1 reports committed memory instead of reserved memory from the Runtime.maxMemory() method

Reviewed-by: ysr, jmasa